Use JDK17 + fixes deprecation warnings