@@ -322,7 +322,7 @@ public class PTMClustersPanel extends HourglassPanel implements RendererMouseCal
 
         layeredPane.add(proteinPTMClusterPanel, JLayeredPane.DEFAULT_LAYER);
         layeredPane.add(m_infoToggleButton.getInfoPanel(), JLayeredPane.PALETTE_LAYER);  
-        layeredPane.add(m_searchToggleButton.getSearchPanel(), new Integer(JLayeredPane.PALETTE_LAYER+1));
+        layeredPane.add(m_searchToggleButton.getSearchPanel(), Integer.valueOf(JLayeredPane.PALETTE_LAYER+1));
         setColumnsVisibility();
     }
     
